# qt-pk-projekt

./: ARX.cpp  ARX.h  App.cpp  App.h  BuforDanych.cpp  BuforDanych.h  CMakeLists.txt  PID.cpp  PID.h  PROJEKTPK.pro  Sprzezenie.cpp  Sprzezenie.h  Sygnal.cpp  Sygnal.h  example.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  zasoby.qrc
